assets/sass/_bc-additions.scss
// Berea College additions

@import "components/buttons";

/* http://sachagreif.com/useful-sass-mixins/ */
@mixin navigation-list {
  list-style-type:none;
  padding:0;
  margin:0;
  overflow:hidden;
  > li{
    display:block;
    float:left;
    &:last-child{
      margin-right:0px;
    }
  }
}


.cd-header-ribbon {
  width: 210px;
  height: 280px;
  background-color: $bc-blue;
  position: absolute;
  top: 0px;
  left: 50px;
  z-index: $above-content;
  img {
    display: block;
    margin: auto;
    margin-top: 35px;
    width: 190px;
    height: 190px;
  }
}

.hero-nav-wrapper {
  background-color:rgba(0, 90, 139, 0.8); // This is $bc-blue
  padding: 20px;
  text-align: center;
}

.hero-nav {
  @include navigation-list;
  display: flex;
  justify-content: space-around;
  li {
    padding: 0 20px;
    color: $bc-white;
    font-size: 1.2em;
    font-weight: bold;
  }
}

.homepage-slider {
  height: 620px;
  background: url('../images/1024_640_campus_shot.jpg');
  h1 {
    font-family: $opensans-condensed;
    color: $bc-white;
    text-align: right;
    font-size: 48px;
    font-weight: 700;
    padding-top: 320px;
    padding-right: 20px;
    margin-top: 0;
    margin-bottom: 0;
  }
  p {
    text-align: right;
    padding-right: 20px;
    color: $bc-white;
  }
  .tagline {
      font-family: $garamond;
      font-size: 18px;
      font-weight: 700;
      letter-spacing: -0.015em;
      a {
        font-family: $opensans-condensed;
        font-size: 14px !important;
        text-transform: uppercase;
        text-decoration: none;
        @include button(pill, $bc-white);
      }
      a:link, a:hover, a:visited, a:active {
        color: $bc-blue;
      }
  }
}

.people-slider {
  ul {
    @include navigation-list;
    display: flex;
    justify-content: space-around;
    li {
      padding: 0 20px;
      color: $bc-blue;
      font-size: 1.2em;
      font-weight: bold;
    }
  }
}

.news {
  ul {
    @include navigation-list;
    display: flex;
    justify-content: space-around;
    li {
      padding: 0 5px;
      color: $bc-blue;
    }
  }
}

.heading-underlined {
  font-size: 1.3em;
  text-transform: uppercase;
  color: $bc-blue;
  padding-bottom: 10px;
  padding-top: 30px;
  border-bottom: 2px solid $bc-orange;
  font-weight: normal;
}

